# node-sounddevice

./: .gitignore  .npmignore  README.md  README_CN.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
backends/portaudio/: index.ts  native.ts
backends/portaudio/native/: Cargo.toml  build.rs  copy-artifact.js  package.json
backends/portaudio/native/src/: device.rs  error.rs  ffi.rs  lib.rs  stream.rs
backends/web/: index.ts
examples/: list_devices.ts  play_file.ts  play_sine.ts  record.ts  web_demo.html
scripts/: copy-native-to-dist.js  dev-server.mjs
src/: convenience.ts  defaults.ts  errors.ts  index.ts  interfaces.ts  types.ts
test/integration/: web.test.ts
test/unit/: core.test.ts  types.test.ts
