[package]
name = "node-sounddevice-native"
version = "0.1.0"
edition = "2021"
description = "PortAudio native addon for node-sounddevice (napi-rs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2"
once_cell = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
